Add flag to support Arrow file reading